--- a/.vscode/dusbin.html
+++ b/.vscode/dusbin.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>3D Dustbin Open/Close</title>
-  <link rel="stylesheet" href="dustbin.css">
+  <link rel="stylesheet" href="dusbin.css">
 </head>
 <body>
   <div class="dustbin">
